--- a/src/content/ideas/2025/gios-retro/index.mdx
+++ b/src/content/ideas/2025/gios-retro/index.mdx
@@ -567,6 +567,13 @@ GIOS was the first course I took for the program and it was a great way to get m
 
 I hope this post is helpful for others considering GIOS, and I welcome feedback or corrections—especially if you catch something I got wrong. I'm still learning, and learning in public is part of the process.
 
+{/* TODO links to other posts
+- https://eugeneyan.com/writing/omscs-cs6200-introduction-to-operating-systems/
+- https://lowyx.com/posts/gt-gios/
+- https://www.omscs-notes.com/operating-systems/welcome
+- https://andrewrepp.com/omscs_classes/GIOS
+*/}
+
 ---
 
 Thanks for reading!
